fixed background in about and projects on mobile view

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,4 +1,5 @@
 .about {
+    background: linear-gradient(to top, #785001cd,  #b25733ba), url("../assets/wp5146853-graffiti-4k-mobile-wallpapers.jpg");
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,10 +18,9 @@
     .about-me {
         width: 50%;
     }
-    .multi-container {
-        background: linear-gradient(to top, #785001cd,  #b25733ba), url("../assets/wp5146853-graffiti-4k-mobile-wallpapers.jpg");
+    .about-skills { 
         width: 100%;
-        height: 100%;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -38,6 +38,7 @@
             height: 30%;
             color:white;
             margin-top:6rem;
+            margin-bottom: 2rem;
             
             h3 {
                 font-family: 'Roboto', sans-serif;
@@ -62,13 +63,13 @@
             width: 80%;
             height: 45%;
             color:white;
-            margin-top:7rem;
+            margin-top:2rem;
             h3 {
                 font-family: 'Roboto', sans-serif;
                 font-weight: 900;
-                text-align: center;
+                text-align: start;
             }
-            .skills {
+            .skills-2 {
                 display: flex;
                 flex-direction: column;
                 padding: 9px;
