--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -6,12 +6,9 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  padding-bottom: 4.5rem;
-@media only screen and (min-width:768px) {
-  bagckground-size:cover;
+  // padding-bottom: 4.5rem
   height: 100vh;
-}
-  
+  background-size: cover;
   @media only screen and (min-width:915px)  {
     background-image: url("../assets/macbook.jpg");
     background-size: cover;
